fixed the word wrap

--- a/public/index.css
+++ b/public/index.css
@@ -93,6 +93,10 @@
   justify-content: space-between;
 }
 
+.from-date p:first-child {
+  word-break: break-all;
+}
+
 .message {
   font-family: 'Indie Flower';
 
@@ -116,6 +120,8 @@
   box-shadow: 5px 5px 7px rgba(33,33,33,.7);
   transform: rotate(var(--rotation));
   transition: transform 0.2s linear;
+
+  word-wrap: break-word;
 }
 
 .message:hover {
