--- a/public/message.css
+++ b/public/message.css
@@ -61,6 +61,8 @@ h1, h2 {
   box-shadow: 5px 5px 7px rgba(33,33,33,.7);
   transform: rotate(var(--rotation));
   transition: transform 0.2s linear;
+
+  word-wrap: break-word;
 }
 
 .message-note:hover {
